--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -182,11 +182,7 @@
   <ItemGroup>
     <Content Include="mongocrypt.dll" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\ModelAircraft\" />
-    <Folder Include="Models\ModelCompany\" />
-    <Folder Include="Models\ModelPassenger\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MongoDB.Libmongocrypt.1.6.0\build\MongoDB.Libmongocrypt.targets" Condition="Exists('..\packages\MongoDB.Libmongocrypt.1.6.0\build\MongoDB.Libmongocrypt.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
