--- a/API_Company/appsettings.json
+++ b/API_Company/appsettings.json
@@ -13,6 +13,6 @@
         "AddressCollectionName": "Address",
         "BlockedCollectionName": "Blocked",
         "ConnectionString": "mongodb://localhost:27017",
-        "DatabaseName": "OnTheFly"
+        "DatabaseName": "DBCompany"
     }
 }
